# rodbot

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: config.rs  event.rs  main.rs  runner.rs
test/: issue_comment_1.json  issue_comment_2.json  rodbot.yaml
test/1/: rodbot.yaml
