[package]
name = "rodbot"
version = "0.1.6"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A Rusty bot for GitHub actions"
repository = "https://github.com/ctron/rodbot"
categories = ["development-tools", "command-line-utilities"]
keywords = ["github", "actions", "ci", "build", "automation"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = "2"
derefable = "0.1"
jsonpath = "0.1"
log = "0.4"
regex = "1.5"
lazy_static = "1.4"
simplelog = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"

[dev-dependencies]
env_logger = "0.9"